--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Hello World</h1>
+<h1>Hello World! Its Julia </h1>
 <p> How are <strong> you </strong>? </p>
   <head>
     <title>First site</title>
@@ -8,6 +8,3 @@
      <h1>Hello world</h1>
      </body>
      </html>
-     h1 {
-        color: red;
-      }
